--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
 <html lang="">
+  <!--
+                  _ooOoo_
+                 o8888888o
+                 88" . "88
+                 (| -_- |)
+                  O\ = /O
+              ____/'---'\____
+              .  ' \\| |// '  .
+              / \\||| : |||// \
+            / _||||| -:- |||||- \
+              | | \\\ - /// | |
+            | \_| ''\---/'' |_/  |
+            \ .-\__ `-` ___/-. /
+          ___`. .' /--.--\ '. .`___
+      ."" '< '.___\_<|>_/___.' >' "".
+      | | : `- `.;`\ _ /`;.`/ -` : | |
+       \ \ `-. \_ __\ /__ _/ .-` / /
+======'-.____`-.___\_____/___.-`____.-'======
+                  '=---='
+.............................................
+        佛祖保佑             永无BUG
+-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
