--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <title></title>
     <meta name="keywords" content="关键词">
     <meta name="description" content="描述">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <noscript>
